--- a/src/main/resources/properties/pagecontent_en_US.properties
+++ b/src/main/resources/properties/pagecontent_en_US.properties
@@ -2,7 +2,7 @@
 pages.home=Home
 
 footer.site_by=Site by:
-footer.back_connection=Phone for feedback: 8029-635-08-32
+footer.back_connection=Address of the store: Grodno, B.Troitskaya street 6. Phone for feedback: 8033-338-38-38
 
 message=Message
 
@@ -93,6 +93,7 @@ admin.device=Device
 admin.devices=Devices
 
 admin.orders=Orders
+admin.manager=Manager page
 admin.users.title=Users list
 admin.users.id=User ID
 admin.users.email=Email
@@ -150,3 +151,8 @@ user.device_page=Device page
 user.device.catalog=Products catalog
 user.add_to_order=Add to card
 admin.more.detailed=More detailed
+
+admin.card.price.all=The total cost of the order in BYN:
+admin.card.price=Price per unit BYN:
+admin.card.remove=Remove from card
+admin.card.quantity=Quantity
