--- a/src/main/resources/properties/pagecontent_ru_RU.properties
+++ b/src/main/resources/properties/pagecontent_ru_RU.properties
@@ -2,7 +2,7 @@
 pages.home=На главную
 
 footer.site_by=Сайт создан:
-footer.back_connection=Телефон для обратной связи: 8029-635-08-32
+footer.back_connection=Адресс магазина: г.Гродно, ул. Б.Троицкая 6. Телефон для обратной связи: 8033-338-38-38
 
 message=Сообщение
 
@@ -93,6 +93,7 @@ admin.device=Устройство
 admin.devices=Устройства
 
 admin.orders=Заказы
+admin.manager=Страница менеджера
 admin.users.title=Список пользователей
 admin.users.id=ID пользователя
 admin.users.email=Почта
@@ -150,3 +151,8 @@ user.device_page=Страница устройства
 user.device.catalog=Каталог продуктов
 user.add_to_order=Добавить в корзину
 admin.more.detailed=Подробнее
+
+admin.card.price.all=Общая стоимость заказа в BYN:
+admin.card.price=Цена за одну единицу BYN:
+admin.card.remove=Удалить из корзины
+admin.card.quantity=Колличество
